[package]
name = "tg-bot-assistant"
version = "0.1.0"
edition = "2021"

[dependencies]
teloxide = { version = "0.13", features = [
    "macros",
    "webhooks-axum",
    "throttle",
    "cache-me",
    "ctrlc_handler",
    "rustls",
] }
log = "0.4"
tokio = { version = "1.8", features = ["rt-multi-thread", "macros"] }
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
url = "2.5.2"
anyhow = "1.0.89"
axum = "0.7.6"
futures = "0.3.30"
